--- a/drupal/supervisord.conf
+++ b/drupal/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:sshd]
-command=/usr/sbin/sshd -D
+command=/usr/sbin/sshd -D -e
 
 [program:apache2]
 command=/bin/bash -c "/etc/apache2/foreground.sh"
