turn off memcached in supervisord, since we want to use a backing service

--- a/drupal/supervisord.conf
+++ b/drupal/supervisord.conf
@@ -7,7 +7,7 @@ command=/usr/sbin/sshd -D -e
 [program:apache2]
 command=/bin/bash -c "/etc/apache2/foreground.sh"
 
-[program:memcached]
-command=/usr/bin/memcached -p 11211 -u www-data -m 64 -c 1024 -t 4
+#[program:memcached]
+#command=/usr/bin/memcached -p 11211 -u www-data -m 64 -c 1024 -t 4
 
 
